# AM03127-Controller

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  openapi.yaml  partition-table.csv  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.helix/: languages.toml
PCB/: .gitignore  AM03127-Controller.kicad_pcb  AM03127-Controller.kicad_pro  AM03127-Controller.kicad_sch  fp-lib-table  sym-lib-table
PCB/jlcpcb/: project.db
PCB/jlcpcb/gerber/: AM03127-Controller-CuBottom.gbr  AM03127-Controller-CuTop.gbr  AM03127-Controller-EdgeCuts.gbr  AM03127-Controller-MaskBottom.gbr  AM03127-Controller-MaskTop.gbr  AM03127-Controller-NPTH.drl  AM03127-Controller-PTH.drl  AM03127-Controller-SilkBottom.gbr  AM03127-Controller-SilkTop.gbr
PCB/libs/RJ11.pretty/: RJ11-TH_PCB-6P4C-90_C189746.kicad_mod
PCB/production/: netlist.ipc
am03127/: Cargo.toml
am03127-cli/: .gitignore  Cargo.toml
am03127-cli/src/: console.rs  main.rs
am03127-cli/src/commands/: clock.rs  info.rs  list.rs  mod.rs  page.rs  status.rs  update.rs
am03127-client/: Cargo.toml
am03127-client/src/: lib.rs
am03127-commands/: Cargo.toml
am03127-commands/src/: lib.rs  page.rs  realtime_clock.rs
am03127-firmware/: Cargo.toml
am03127-firmware/.cargo/: config.toml
am03127-firmware/src/: clock.rs  panel.rs  storage.rs  uart.rs
am03127-firmware/src/server/: index.html  mod.rs  routers.rs
am03127/src/: delete.rs  page.rs  realtime_clock.rs  schedule.rs
cli/: Cargo.toml  panel-config.toml
cli/src/: config.rs  console.rs  main.rs
cli/src/commands/: clock.rs  list.rs  mod.rs  open.rs  status.rs  update.rs
controller/: Cargo.toml  build.rs  partition-table.csv  rust-analyzer.toml
controller/src/: clock.rs  error.rs  main.rs  panel.rs  storage.rs
controller/src/server/: mod.rs  ota.rs  routers.rs
docs/: openapi.yaml
kiCad/ff-led-panel/: .gitignore  ff-led-panel.kicad_pcb  ff-led-panel.kicad_prl  ff-led-panel.kicad_pro  ff-led-panel.kicad_sch  fp-lib-table
kiCad/ff-led-panel/jlcpcb/: project.db
kiCad/ff-led-panel/jlcpcb/gerber/: ff-led-panel-CuBottom.gbr  ff-led-panel-CuTop.gbr  ff-led-panel-EdgeCuts.gbr  ff-led-panel-MaskBottom.gbr  ff-led-panel-MaskTop.gbr  ff-led-panel-NPTH.drl  ff-led-panel-SilkBottom.gbr  ff-led-panel-SilkTop.gbr
kiCad/ff-led-panel/libs/: RJ11.kicad_sym
kiCad/ff-led-panel/libs/RJ11.3dshapes/: RJ11-TH_PCB-6P4C-90_C189746.step  RJ11-TH_PCB-6P4C-90_C189746.wrl
src/: am03127.rs  clock.rs  error.rs  main.rs  panel.rs  server.rs  storage.rs  uart.rs
src/am03127/: delete.rs  mod.rs  realtime_clock.rs  schedule.rs
src/am03127/page_content/: formatting.rs  mod.rs
src/server/: dto.rs  index.html  layers.rs  mod.rs  ota.rs  router.rs  routers.rs
