[package]
edition = "2024"
name    = "am03127-controller"
version = "0.1.0"

[dependencies]
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1" }
embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-sync = { version = "0.7.2", features = ["log"] }
embassy-time = { version = "0.5.0" }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = [ "esp32c3"] }
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable", "log-04"] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "esp32c3",
  "log-04",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "embassy", "esp-radio"] }
esp-storage = { version = "0.8.1", features = ["esp32c3"] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.28" }
picoserve = { version = "0.16.0", features = ["alloc", "embassy", "log"] }
postcard = "1.1.3"
sequential-storage = { version = "5.0.1", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive", "alloc"], default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "socket-icmp",
] }
sntpc = { version = "0.6.1", default-features = false, features = ["embassy-socket"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
time = { version = "0.3.44", default-features = false }

[patch.crates-io]
# esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "5fde6a7" }
# esp-rom-sys= { git = "https://github.com/esp-rs/esp-hal", rev = "5fde6a7" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
