[package]
name = "am03127-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
am03127-commands = { path = "../am03127-commands" }
am03127-client = { path = "../am03127-client" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
